<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".payment_getways.PaymentActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/stripe_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="@dimen/space55"
        android:layout_marginTop="@dimen/space25"
        android:layout_marginBottom="@dimen/space10"
        android:background="@drawable/round_btn_bg"
        android:elevation="20dp"
        android:text="Stripe"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/pay_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="@dimen/space55"
        android:layout_marginTop="@dimen/space25"
        android:layout_marginBottom="@dimen/space10"
        android:background="@drawable/round_btn_bg"
        android:elevation="20dp"
        android:text="Pay U"
        android:textColor="@color/white" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/recording_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="@dimen/space55"
        android:layout_marginTop="@dimen/space25"
        android:layout_marginBottom="@dimen/space10"
        android:background="@drawable/round_btn_bg"
        android:elevation="20dp"
        android:text="@string/voice_recording"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/video_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="@dimen/space55"
        android:layout_marginTop="@dimen/space25"
        android:layout_marginBottom="@dimen/space10"
        android:background="@drawable/round_btn_bg"
        android:elevation="20dp"
        android:text="@string/video_player"
        android:textColor="@color/white" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/number_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="@dimen/space55"
        android:layout_marginTop="@dimen/space25"
        android:layout_marginBottom="@dimen/space10"
        android:background="@drawable/round_btn_bg"
        android:elevation="20dp"
        android:text="@string/get_number"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/txt_to_speech_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="@dimen/space55"
        android:layout_marginTop="@dimen/space25"
        android:layout_marginBottom="@dimen/space10"
        android:background="@drawable/round_btn_bg"
        android:elevation="20dp"
        android:text="@string/text_to_speech"
        android:textColor="@color/white" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/txt_to_open_camera"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="@dimen/space55"
        android:layout_marginTop="@dimen/space25"
        android:layout_marginBottom="@dimen/space10"
        android:background="@drawable/round_btn_bg"
        android:elevation="20dp"
        android:text="Open Camera"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ai_chat"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="@dimen/space55"
        android:layout_marginTop="@dimen/space25"
        android:layout_marginBottom="@dimen/space10"
        android:background="@drawable/round_btn_bg"
        android:elevation="20dp"
        android:text="Ai Chat"
        android:textColor="@color/white" />
</LinearLayout>